    that are independent from user presets.
    For Windows, "config.json" is stored under "username\AppData\Roaming\TinyPedal" folder.
    For Linux, "config.json" is stored under "home/.config/TinyPedal" folder.
  - Log files are now stored in the same folder as global user config file.
  - All "application" settings are now moved into "config.json".

* [New]Auto load preset system
  - Add "Auto load preset" system to allow auto loading predefined game-specific preset
    depends on currently active game (currently either RF2 or LMU).
    Auto loading preset is triggered when a new or different game is started & active.
    Auto loading will only trigger once per game change.
    This option is disabled by default.
  - Add "Auto load primary preset" check box in "Preset" tab, which enables or disables
    "Auto load preset" system.
  - Add "primary preset" tagging function in "Preset" tab, user can "Right" click on a preset
    and select "Set primary for ***" to tag a preset as "primary" for specific game.
    To clear all tags from selected preset, "Right" click and select "Clear primary tag".
    Primary preset will be auto loaded when "Auto load primary preset" is enabled and
    a new or different game is started & active.
    Note, a single preset can have tags from multiple games.

* Vehicle Brand Editor
  - Now allows multi-selection for deleting vehicle brand entries.
  - Fixed an issue where some vehicle info is missing while importing from LMU Rest API.
    Make sure to import again to update all vehicle brand info from LMU.

* Wheels module
  - Add "maximum_rotation_difference_*" options, which sets maximum rotation difference (percentage)
    between left or right wheel and same axle for limiting wheel radius calculation.
    Setting higher difference value may result inaccurate wheel radius reading.
    Default value is `0.002`.

* Brake bias Widget
  - Add "layout" option, which sets display orientation.